Adds more headings in footer and text in More Information column

--- a/source/sass/_custom.scss
+++ b/source/sass/_custom.scss
@@ -56,3 +56,10 @@ body {
 #footer-text{
   padding: 1% 0;
 }
+.e-partner-logo{
+  width: 32%;
+}
+#left-column-footer, #right-column-footer{
+  text-align: center;
+
+}
