--- a/source/templates/_base.html
+++ b/source/templates/_base.html
@@ -60,7 +60,7 @@
         {% block main %}{% endblock %}
     </main>
 
-    <footer class='b-footer'>
+    <!-- <footer class='b-footer'>
         <div class="row">
           <h3 class="medium-12 large-10 large-offset-2 column " id="footer-text">The Open Governance Research Exchange is a collaboration of:</h3>
             <div class="medium-4 column">
@@ -73,8 +73,24 @@
                 <a href="https://www.thegovlab.org/"><img src="./img/govlab-logo-white.png" alt="NYU Gov Lab logo" class="e-partner-logo m-govlab"/></a>
             </div>
         </div>
-    </footer>
+    </footer> -->
 
+    <footer class="b-footer">
+        <div class="row">
+            <div class="medium-6 column" id="left-column-footer">
+              <h3>ABOUT</h3>
+              <a href="" class="b-button">Submit Research<i class="material-icons">arrow_forward</i></a>
+              <a href="mailto:ogrx@thegovlab.org" class="b-button">Contact<i class="material-icons">send</i></a>
+
+            </div>
+            <div class="medium-6 column" id="right-column-footer">
+              <h3>Contributing Organizations</h3>
+                <a href="#"><img src="./img/deet-logo-white.png" alt="Digital Engagement logo" class="e-partner-logo m-deet"/></a>
+                <a href="http://www.mysociety.org/" target="_blank"><img src="./img/mysociety-logo-white.png" alt="mySociety logo" class="e-partner-logo m-mysociety"/></a>
+                <a href="http://www.thegovlab.org/" target="_blank"><img src="./img/govlab-logo-white.png" alt="NYU Gov Lab logo" class="e-partner-logo m-govlab"/></a>
+            </div>
+        </div>
+    </footer>
     <div class="b-copyright">
         <div class="row">
             <div class="large-10 large-centered columns">
