--- a/source/templates/about.html
+++ b/source/templates/about.html
@@ -13,7 +13,7 @@
     <div class="row">
         <div class="column small-12">
             <div class="column small-3 small-offset-1 column "><i class="fa fa-link" aria-hidden="true"></i>
- OPENGOVRESEARCH.ORG</div>
+ OGRX.ORG</div>
             <div class="column small-3 small-offset-1 column "><i class="fa fa-envelope" aria-hidden="true"></i> OGRX@THEGOVLAB.ORG</div>
             <div class="column small-3 small-offset-1 column "><i class="fa fa-twitter" aria-hidden="true"></i>
 #OGRX</div>
